--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@400;500&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400;1,800&display=swap');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;1,400;1,800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -13,11 +14,12 @@ html {
 }
 :root {
   --bg-color: #21252b;
-  --primary: #bfc0bc;
+  --primary: #bcc0c0;
   --border-color: #bfc0bc91;
   --bg-dark: #1e2127;
   --secondary: #eeeeee;
-  --heading: #34cceb;
+  /* --heading: #34cceb; */
+  --heading: #7ce4e4;
   --scrollbar: #858585;
   --scrollbar-track: #4b4a4a;
   --menu-color: #131416;
@@ -66,7 +68,7 @@ p {
 }
 .page-background-num {
   font-size: 28em;
-  font-weight: 600;
+  font-weight: 500;
   max-width: 350px;
   max-height: 400px;
   font-family: 'Teko', sans-serif;
@@ -195,6 +197,7 @@ p {
 .page-navigation a {
   width: 24px;
   height: 24px;
+  
   transition: 0.3s;
   position: absolute;
   left: -1px;
@@ -269,6 +272,8 @@ svg line {
   margin-bottom: 35px;
   width: fit-content;
   position: relative;
+  font-weight: 400;
+
 }
 
 .section-header:before {
@@ -461,7 +466,7 @@ input:checked + .slider:before {
   border-radius: 34px;
 }
 
-.slider.round:before {
+.slider.round:before { 
   border-radius: 50%;
 }
 
@@ -476,18 +481,25 @@ input:checked + .slider:before {
 }
 .intro h1 {
   font-size: 60px;
+  font-weight: 400;
   width: fit-content;
   animation-delay: 800ms;
 }
 
 .intro h2 {
   font-size: 40px;
+  font-weight: 400;
+
   margin: 0px 0 50px 0;
   animation-delay: 900ms;
 }
 
 .intro p {
   animation-delay: 1000ms;
+  font-weight: 400;
+  line-height: 140%;
+  max-width: 500px;
+
 }
 
 /* ******************************************** abbout start */
@@ -790,7 +802,7 @@ input:checked + .slider:before {
   margin-bottom: 10px;
   background: var(--bg-dark);
   color: var(--scrollbar);
-  font-weight: 800;
+  font-weight: 600;
 }
 
 /* ******************************************** contact start */
